demo-deploy/k8s/base/service-gossip.yaml
apiVersion: v1
kind: Service
metadata:
  name: ishikari-gossip
  labels:
    app: ishikari
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: ishikari
  ports:
    - name: gossip
      port: 7946
      targetPort: gossip
      protocol: UDP
